statics/k8s/geekbrains-namespace.yaml
#custom namespace for minikube
apiVersion: v1
kind: Namespace
metadata:
 name: geekbrains
