statics/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statics
  labels:
    app: statics
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  selector:
    matchLabels:
      app: statics
  template:
    metadata:
      labels:
        app: statics
    spec:
      containers:
        - name: statics
          image: docker.io/fe4p3b/statics:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /__heartbeat__
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /__heartbeat__
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
