statics/k8s/service.yaml
apiVersion: v1
kind: Service                   
metadata:
  name: statics
  labels:
    app: statics
spec:
  type: NodePort                
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: statics
